--- a/Bio_Site.css
+++ b/Bio_Site.css
@@ -9,7 +9,7 @@ body {
 nav {
     overflow: hidden;
     background-color: #0028db;
-    border: solid 1px #13d6db;
+    border: solid 2px #dbba44;
 }
 
 nav a {
