--- a/Bio_Site.css
+++ b/Bio_Site.css
@@ -25,3 +25,19 @@ nav a:hover {
     background-color: #1e67c9;
     color: #3FF3FC;
 }
+
+/*.left {
+    position: relative;
+    text-align: center;
+    color: white;
+    background-image: url("/landingpageimages/image2.jpeg");
+    height: 400px;
+    background-size: cover;
+}
+
+.aboutcontainer {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+} working on sizing down the pictures will be updates next turn in cycle */
