--- a/Bio_Site.css
+++ b/Bio_Site.css
@@ -35,12 +35,26 @@ footer {
     border: solid 2px #dbba44;
 }
 
-footer p {
+footer p.copyright {
     color: white;
     font-weight: 400;
     float: left;
     padding-right: 10px;
     font-style: italic;
+}
+
+footer a {
+    color: white;
+    font-weight: 400;
+    float: right;
+    padding-right: 10px;
+    font-style: italic;
+    text-decoration: none;
+}
+
+footer a:hover {
+    background-color: #1e67c9;
+    color: #3FF3FC;
 }
 
 /*.left {
