--- a/Bio_Site.css
+++ b/Bio_Site.css
@@ -9,7 +9,6 @@ body {
 nav {
     overflow: hidden;
     background-color: #0028db;
-    border: solid 2px #dbba44;
 }
 
 nav a {
@@ -66,6 +65,14 @@ h2.welcome {
 
 }
 
+header {
+    background-color: #7d9eda;
+    color: white;
+    padding: 20px;
+    text-align: center;
+}
+
+
 h1 {
     font-family: 'Lato', sans-serif;
     font-weight: 700;
@@ -73,7 +80,9 @@ h1 {
     text-decoration: underline;
 }
 
-
+div.top {
+    border: solid 2px #dbba44;
+}
 
 
 
