--- a/Bio_Site.css
+++ b/Bio_Site.css
@@ -89,7 +89,7 @@ div.top {
 
 .left {
     position: relative;
-    text-align: center;
+    text-align: left;
     color: black;
     background-image: url("/biosite/landingpageimages/image2.jpg");
     height: 400px;
