--- a/Bio_Site.css
+++ b/Bio_Site.css
@@ -30,30 +30,11 @@ nav a:hover {
 footer {
     padding: 20px;
     background-color: #0028db;
-    border: solid 2px #dbba44;
-}
-
-footer p.copyright {
-    font-family: 'Lato', 'Georgia', 'Times New Roman', 'Times', 'serif';
-    color: white;
-    font-weight: 400;
-    float: left;
-    padding-right: 10px;
-    font-style: italic;
+    color: #fff;
+    text-align: center;
 }
 
 footer a {
-    font-family: 'Lato', 'Georgia', 'Times New Roman', 'Times', 'serif';
-    color: white;
-    font-weight: 400;
-    float: right;
-    padding-right: 10px;
-    font-style: italic;
-    text-decoration: none;
-}
-
-footer a:hover {
-    background-color: #1e67c9;
     color: #3FF3FC;
 }
 
