--- a/Bio_Site.css
+++ b/Bio_Site.css
@@ -33,7 +33,7 @@ footer {
     background-color: #0028db;
     color: #fff;
     text-align: center;
-
+    font-family: 'Lato', 'Georgia', 'Times New Roman', 'Times', 'serif';
 }
 
 footer a {
