--- a/Bio_Site.css
+++ b/Bio_Site.css
@@ -31,7 +31,7 @@ nav a:hover {
 footer {
     padding: 20px;
     background-color: #0028db;
-    color: #fff;
+    color: #7d9eda;
     text-align: center;
     font-family: 'Lato', 'Georgia', 'Times New Roman', 'Times', 'serif';
 }
