--- a/Bio_Site.css
+++ b/Bio_Site.css
@@ -110,6 +110,6 @@ div.top {
     z-index: 1;
     font-size: 24px;
     font-weight: bold;
-    color: rgb(89, 89, 89);
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+    color: #3FF3FC;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
