--- a/Bio_Site.css
+++ b/Bio_Site.css
@@ -89,7 +89,7 @@ div.top {
 
 .button-container a:hover {
     background-color: #000;
-    /*color: #fff;*/
+
 }
 
 .button {
@@ -111,5 +111,5 @@ div.top {
     font-size: 24px;
     font-weight: bold;
     color: #3FF3FC;
-    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+    text-shadow: 3px 3px 3px #dbba44;
 }
